--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
     
     
    
@@ -47,6 +47,9 @@
                                    
                                     <label> {{itemTodo.name}}</label>
                                 </div>
+
+
+                               
                                 
                             </li>
                         </ul>
@@ -59,7 +62,111 @@
     </div>
 </section>
 
+                                ////////////////////////////////////////
+
+                                   ///////////////////////////////
+
+                                      ///////////////////////
+
+                                         ///////////// -->
 
 
 
 
+
+<header class="vh-100 masthead text-center text-white">
+
+    <div class="bg-circle-1 bg-circle"></div>
+    <div class="bg-circle-2 bg-circle"></div>
+    <div class="bg-circle-3 bg-circle"></div>
+    <div class="bg-circle-4 bg-circle"></div>
+
+
+    <div style="padding-left: 30%; margin-top: 0px;">
+
+        <div class="container masthead-content pt-5">
+
+            <!-- <div class="row mt-4 bg-white " > -->
+
+
+
+
+            <div class="col-md-6 bg-white shadow">
+
+
+                <div class="card m-9 bg-warning mt-4">
+
+                    <h4 class="text-white p-2 pt-2 pb-2"> TODO-List</h4>
+                </div>
+                <div class=" shadow mt-3">
+
+                    <div class="input-group-text mb-3 shadow">
+                        <input type="text" [(ngModel)]="itemTest" placeholder="Enter a To-Do item "
+                            class="form-control form-control-lg"
+                            placeholder="Add task " aria-label="task's name"
+                            aria-describedby="button-addon2">
+                        <button class="btn btn-outline-warning m-2 " (click)="addTodo()" type="button">+</button>
+                    </div>
+
+                    <h4 class="text-primary mt-4 p-2">Tasks :</h4>
+                    <div style=" overflow-y: auto ; height: 400px;">
+                        <div class="m-3">
+                            
+                                    <div class="p-2 shadow">
+                                        <ul class="list-group mb-0">
+                                            <li *ngFor="let task of taskList ; let i = index"
+                                                class="list-group-item d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
+                                        <div class="input-group  mb-3 ">
+                                            <div class="input-group-text">
+                                                <input class="form-check-input mt-0" type="checkbox" value=""
+                                                    [(ngModel)]="task.checked" (change)="addToCompletedList(task)"
+                                                    aria-label="Checkbox for following text input">
+                                            </div>
+                                            <div style="width: 70%; padding-left: 20px; justify-content: center;"
+                                                class=" card   col-md-10">{{task.name}}</div>
+
+                                            <!-- <a (click)="delete(i)" data-mdb-toggle="tooltip" title="Remove item">
+                                                <i class="fas fa-times text-primary m-2"></i>
+                                            </a> -->
+                                            <button title="Remove item" (click)="delete(i)" class="btn btn-outline-danger input-group-text">X</button>
+
+                                        </div>
+                                    </li>
+                                </ul>
+                                    </div>
+                                
+                        </div>
+
+
+
+                        <!-- </div> -->
+
+
+                    </div>
+
+                    <!-- <h4 class="text-primary mt-4 p-2">Completed Tasks :</h4>
+                    <ul class="list-group mb-0">
+                        <li *ngFor="let itemTodo of  completedList"
+                            class="list-group-item d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
+                            <div class="d-flex align-items-center">
+                               
+                                <label> {{itemTodo.name}}</label>
+                            </div>                           
+                            
+                        </li>
+                    </ul>-->
+
+
+                </div>
+
+
+
+
+            </div>
+
+        </div>
+
+
+
+    </div>
+</header>
