--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -118,9 +118,9 @@
                                                 class="list-group-item d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
                                         <div class="input-group  mb-3 ">
                                             <div class="input-group-text">
-                                                <input class="form-check-input mt-0" type="checkbox" value=""
-                                                    [(ngModel)]="task.checked" (change)="addToCompletedList(task)"
-                                                    aria-label="Checkbox for following text input">
+                                                 <input class="form-check-input mt-0" type="checkbox" value=""  aria-label="Checkbox for following text input"> 
+                                                  <!-- [(ngModel)]="task.checked" (change)="addToCompletedList(task)"  -->
+                                                   
                                             </div>
                                             <div style="width: 70%; padding-left: 20px; justify-content: center;"
                                                 class=" card   col-md-10">{{task.name}}</div>
